--- a/views/includes/head.ejs
+++ b/views/includes/head.ejs
@@ -2,7 +2,7 @@
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-146431996-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
-  function gtag()***REMOVED***dataLayer.push(arguments);}
+  function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
   gtag('config', 'UA-146431996-1');
@@ -30,36 +30,36 @@
 <link rel="stylesheet" href="/css/responsive.css">
 <link rel="stylesheet" href="https://cdn.linearicons.com/free/1.0.0/icon-font.min.css">
 <style>
-  .info-text ***REMOVED*** color: white; }
-  nav.navbar ***REMOVED***
+  .info-text { color: white; }
+  nav.navbar {
     padding: 0;
-***REMOVED***
-  .navbar-header ***REMOVED***
+  }
+  .navbar-header {
     height: 100px;
-***REMOVED***
-  .navbar-brand img ***REMOVED***
+  }
+  .navbar-brand img {
     width: 120px;
     height: 120px;
-***REMOVED***
-  .slicknav_nav ***REMOVED***
+  }
+  .slicknav_nav {
     padding-top: 45px;
-***REMOVED***
+  }
 
-  .mix ***REMOVED***
+  .mix {
     padding: 10px;
-***REMOVED***
+  }
 
-  .nivo-lightbox-wrap ***REMOVED***
+  .nivo-lightbox-wrap {
     top: 15%;
     bottom: 5%;
-***REMOVED***
+  }
 
-  @media screen and (max-width: 991px) ***REMOVED***
-    .navbar-header ***REMOVED***
+  @media screen and (max-width: 991px) {
+    .navbar-header {
       height: 70px;
-***REMOVED***
-    .navbar-brand ***REMOVED***
+    }
+    .navbar-brand {
       display: none;
-***REMOVED***
-***REMOVED***
+    }
+  }
 </style>
