--- a/views/information/activities.ejs
+++ b/views/information/activities.ejs
@@ -3,9 +3,9 @@
   <head>
     <%- include('../includes/head.ejs'); %>
     <style>
-      img ***REMOVED***
+      img {
         max-width: 100%;
-  ***REMOVED***
+      }
     </style>
     <title>Activities - SIMPIC 2020</title>
   </head>
