--- a/views/information/registration.ejs
+++ b/views/information/registration.ejs
@@ -44,7 +44,7 @@
             <strong>Letter of Approval</strong><br/>
 
             A statement verifying your status as representatives from your medical school. You will need approval to confirm that your team is the official representative of your school. 
-            <a href="https://drive.google.com/file/d/1GnsxorMmmfJNVriA7mkPISpFP9zTrVLz/view" target="_blank" onclick="gtag('event', 'views', ***REMOVED***event_category: 'PDF', event_label: 'Letter of Approval'});">Download form</a>
+            <a href="https://drive.google.com/file/d/1GnsxorMmmfJNVriA7mkPISpFP9zTrVLz/view" target="_blank" onclick="gtag('event', 'views', {event_category: 'PDF', event_label: 'Letter of Approval'});">Download form</a>
             <br><br>
             <i>The file should be uploaded in pdf or jpg format</i>
           </div>
