--- a/public/css/magnific-popup.css
+++ b/public/css/magnific-popup.css
@@ -1,5 +1,5 @@
 /* Magnific Popup CSS */
-.mfp-bg ***REMOVED***
+.mfp-bg {
   top: 0;
   left: 0;
   width: 100%;
@@ -10,7 +10,7 @@
   background: #0b0b0b;
   opacity: 0.8; }
 
-.mfp-wrap ***REMOVED***
+.mfp-wrap {
   top: 0;
   left: 0;
   width: 100%;
@@ -20,7 +20,7 @@
   outline: none !important;
   -webkit-backface-visibility: hidden; }
 
-.mfp-container ***REMOVED***
+.mfp-container {
   text-align: center;
   position: absolute;
   width: 100%;
@@ -30,16 +30,16 @@
   padding: 0 8px;
   box-sizing: border-box; }
 
-.mfp-container:before ***REMOVED***
+.mfp-container:before {
   content: '';
   display: inline-block;
   height: 100%;
   vertical-align: middle; }
 
-.mfp-align-top .mfp-container:before ***REMOVED***
+.mfp-align-top .mfp-container:before {
   display: none; }
 
-.mfp-content ***REMOVED***
+.mfp-content {
   position: relative;
   display: inline-block;
   vertical-align: middle;
@@ -48,42 +48,42 @@
   z-index: 1045; }
 
 .mfp-inline-holder .mfp-content,
-.mfp-ajax-holder .mfp-content ***REMOVED***
+.mfp-ajax-holder .mfp-content {
   width: 100%;
   cursor: auto; }
 
-.mfp-ajax-cur ***REMOVED***
+.mfp-ajax-cur {
   cursor: progress; }
 
-.mfp-zoom-out-cur, .mfp-zoom-out-cur .mfp-image-holder .mfp-close ***REMOVED***
+.mfp-zoom-out-cur, .mfp-zoom-out-cur .mfp-image-holder .mfp-close {
   cursor: -moz-zoom-out;
   cursor: -webkit-zoom-out;
   cursor: zoom-out; }
 
-.mfp-zoom ***REMOVED***
+.mfp-zoom {
   cursor: pointer;
   cursor: -webkit-zoom-in;
   cursor: -moz-zoom-in;
   cursor: zoom-in; }
 
-.mfp-auto-cursor .mfp-content ***REMOVED***
+.mfp-auto-cursor .mfp-content {
   cursor: auto; }
 
 .mfp-close,
 .mfp-arrow,
 .mfp-preloader,
-.mfp-counter ***REMOVED***
+.mfp-counter {
   -webkit-user-select: none;
   -moz-user-select: none;
   user-select: none; }
 
-.mfp-loading.mfp-figure ***REMOVED***
+.mfp-loading.mfp-figure {
   display: none; }
 
-.mfp-hide ***REMOVED***
+.mfp-hide {
   display: none !important; }
 
-.mfp-preloader ***REMOVED***
+.mfp-preloader {
   color: #CCC;
   position: absolute;
   top: 50%;
@@ -93,19 +93,19 @@
   left: 8px;
   right: 8px;
   z-index: 1044; }
-  .mfp-preloader a ***REMOVED***
+  .mfp-preloader a {
     color: #CCC; }
-    .mfp-preloader a:hover ***REMOVED***
+    .mfp-preloader a:hover {
       color: #FFF; }
 
-.mfp-s-ready .mfp-preloader ***REMOVED***
+.mfp-s-ready .mfp-preloader {
   display: none; }
 
-.mfp-s-error .mfp-content ***REMOVED***
+.mfp-s-error .mfp-content {
   display: none; }
 
 button.mfp-close,
-button.mfp-arrow ***REMOVED***
+button.mfp-arrow {
   overflow: visible;
   cursor: pointer;
   background: transparent;
@@ -118,11 +118,11 @@ button.mfp-arrow ***REMOVED***
   box-shadow: none;
   touch-action: manipulation; }
 
-button::-moz-focus-inner ***REMOVED***
+button::-moz-focus-inner {
   padding: 0;
   border: 0; }
 
-.mfp-close ***REMOVED***
+.mfp-close {
   width: 44px;
   height: 44px;
   line-height: 44px;
@@ -138,23 +138,23 @@ button::-moz-focus-inner ***REMOVED***
   font-size: 28px;
   font-family: Arial, Baskerville, monospace; }
   .mfp-close:hover,
-  .mfp-close:focus ***REMOVED***
+  .mfp-close:focus {
     opacity: 1; }
-  .mfp-close:active ***REMOVED***
+  .mfp-close:active {
     top: 1px; }
 
-.mfp-close-btn-in .mfp-close ***REMOVED***
+.mfp-close-btn-in .mfp-close {
   color: #333; }
 
 .mfp-image-holder .mfp-close,
-.mfp-iframe-holder .mfp-close ***REMOVED***
+.mfp-iframe-holder .mfp-close {
   color: #FFF;
   right: -6px;
   text-align: right;
   padding-right: 6px;
   width: 100%; }
 
-.mfp-counter ***REMOVED***
+.mfp-counter {
   position: absolute;
   top: 0;
   right: 0;
@@ -163,7 +163,7 @@ button::-moz-focus-inner ***REMOVED***
   line-height: 18px;
   white-space: nowrap; }
 
-.mfp-arrow ***REMOVED***
+.mfp-arrow {
   position: absolute;
   opacity: 0.65;
   margin: 0;
@@ -173,13 +173,13 @@ button::-moz-focus-inner ***REMOVED***
   width: 90px;
   height: 110px;
   -webkit-tap-highlight-color: transparent; }
-  .mfp-arrow:active ***REMOVED***
+  .mfp-arrow:active {
     margin-top: -54px; }
   .mfp-arrow:hover,
-  .mfp-arrow:focus ***REMOVED***
+  .mfp-arrow:focus {
     opacity: 1; }
   .mfp-arrow:before,
-  .mfp-arrow:after ***REMOVED***
+  .mfp-arrow:after {
     content: '';
     display: block;
     width: 0;
@@ -190,48 +190,48 @@ button::-moz-focus-inner ***REMOVED***
     margin-top: 35px;
     margin-left: 35px;
     border: medium inset transparent; }
-  .mfp-arrow:after ***REMOVED***
+  .mfp-arrow:after {
     border-top-width: 13px;
     border-bottom-width: 13px;
     top: 8px; }
-  .mfp-arrow:before ***REMOVED***
+  .mfp-arrow:before {
     border-top-width: 21px;
     border-bottom-width: 21px;
     opacity: 0.7; }
 
-.mfp-arrow-left ***REMOVED***
+.mfp-arrow-left {
   left: 0; }
-  .mfp-arrow-left:after ***REMOVED***
+  .mfp-arrow-left:after {
     border-right: 17px solid #FFF;
     margin-left: 31px; }
-  .mfp-arrow-left:before ***REMOVED***
+  .mfp-arrow-left:before {
     margin-left: 25px;
     border-right: 27px solid #3F3F3F; }
 
-.mfp-arrow-right ***REMOVED***
+.mfp-arrow-right {
   right: 0; }
-  .mfp-arrow-right:after ***REMOVED***
+  .mfp-arrow-right:after {
     border-left: 17px solid #FFF;
     margin-left: 39px; }
-  .mfp-arrow-right:before ***REMOVED***
+  .mfp-arrow-right:before {
     border-left: 27px solid #3F3F3F; }
 
-.mfp-iframe-holder ***REMOVED***
+.mfp-iframe-holder {
   padding-top: 40px;
   padding-bottom: 40px; }
-  .mfp-iframe-holder .mfp-content ***REMOVED***
+  .mfp-iframe-holder .mfp-content {
     line-height: 0;
     width: 100%;
     max-width: 900px; }
-  .mfp-iframe-holder .mfp-close ***REMOVED***
+  .mfp-iframe-holder .mfp-close {
     top: -40px; }
 
-.mfp-iframe-scaler ***REMOVED***
+.mfp-iframe-scaler {
   width: 100%;
   height: 0;
   overflow: hidden;
   padding-top: 56.25%; }
-  .mfp-iframe-scaler iframe ***REMOVED***
+  .mfp-iframe-scaler iframe {
     position: absolute;
     display: block;
     top: 0;
@@ -242,7 +242,7 @@ button::-moz-focus-inner ***REMOVED***
     background: #000; }
 
 /* Main image in popup */
-img.mfp-img ***REMOVED***
+img.mfp-img {
   width: auto;
   max-width: 100%;
   height: auto;
@@ -253,9 +253,9 @@ img.mfp-img ***REMOVED***
   margin: 0 auto; }
 
 /* The shadow behind the image */
-.mfp-figure ***REMOVED***
+.mfp-figure {
   line-height: 0; }
-  .mfp-figure:after ***REMOVED***
+  .mfp-figure:after {
     content: '';
     position: absolute;
     left: 0;
@@ -268,15 +268,15 @@ img.mfp-img ***REMOVED***
     z-index: -1;
     box-shadow: 0 0 8px rgba(0, 0, 0, 0.6);
     background: #444; }
-  .mfp-figure small ***REMOVED***
+  .mfp-figure small {
     color: #BDBDBD;
     display: block;
     font-size: 12px;
     line-height: 14px; }
-  .mfp-figure figure ***REMOVED***
+  .mfp-figure figure {
     margin: 0; }
 
-.mfp-bottom-bar ***REMOVED***
+.mfp-bottom-bar {
   margin-top: -36px;
   position: absolute;
   top: 100%;
@@ -284,35 +284,35 @@ img.mfp-img ***REMOVED***
   width: 100%;
   cursor: auto; }
 
-.mfp-title ***REMOVED***
+.mfp-title {
   text-align: left;
   line-height: 18px;
   color: #F3F3F3;
   word-wrap: break-word;
   padding-right: 36px; }
 
-.mfp-image-holder .mfp-content ***REMOVED***
+.mfp-image-holder .mfp-content {
   max-width: 100%; }
 
-.mfp-gallery .mfp-image-holder .mfp-figure ***REMOVED***
+.mfp-gallery .mfp-image-holder .mfp-figure {
   cursor: pointer; }
 
-@media screen and (max-width: 800px) and (orientation: landscape), screen and (max-height: 300px) ***REMOVED***
+@media screen and (max-width: 800px) and (orientation: landscape), screen and (max-height: 300px) {
   /**
        * Remove all paddings around the image on small screen
        */
-  .mfp-img-mobile .mfp-image-holder ***REMOVED***
+  .mfp-img-mobile .mfp-image-holder {
     padding-left: 0;
     padding-right: 0; }
-  .mfp-img-mobile img.mfp-img ***REMOVED***
+  .mfp-img-mobile img.mfp-img {
     padding: 0; }
-  .mfp-img-mobile .mfp-figure:after ***REMOVED***
+  .mfp-img-mobile .mfp-figure:after {
     top: 0;
     bottom: 0; }
-  .mfp-img-mobile .mfp-figure small ***REMOVED***
+  .mfp-img-mobile .mfp-figure small {
     display: inline;
     margin-left: 5px; }
-  .mfp-img-mobile .mfp-bottom-bar ***REMOVED***
+  .mfp-img-mobile .mfp-bottom-bar {
     background: rgba(0, 0, 0, 0.6);
     bottom: 0;
     margin: 0;
@@ -320,12 +320,12 @@ img.mfp-img ***REMOVED***
     padding: 3px 5px;
     position: fixed;
     box-sizing: border-box; }
-    .mfp-img-mobile .mfp-bottom-bar:empty ***REMOVED***
+    .mfp-img-mobile .mfp-bottom-bar:empty {
       padding: 0; }
-  .mfp-img-mobile .mfp-counter ***REMOVED***
+  .mfp-img-mobile .mfp-counter {
     right: 5px;
     top: 3px; }
-  .mfp-img-mobile .mfp-close ***REMOVED***
+  .mfp-img-mobile .mfp-close {
     top: 0;
     right: 0;
     width: 35px;
@@ -336,16 +336,16 @@ img.mfp-img ***REMOVED***
     text-align: center;
     padding: 0; } }
 
-@media all and (max-width: 900px) ***REMOVED***
-  .mfp-arrow ***REMOVED***
+@media all and (max-width: 900px) {
+  .mfp-arrow {
     -webkit-transform: scale(0.75);
     transform: scale(0.75); }
-  .mfp-arrow-left ***REMOVED***
+  .mfp-arrow-left {
     -webkit-transform-origin: 0;
     transform-origin: 0; }
-  .mfp-arrow-right ***REMOVED***
+  .mfp-arrow-right {
     -webkit-transform-origin: 100%;
     transform-origin: 100%; }
-  .mfp-container ***REMOVED***
+  .mfp-container {
     padding-left: 6px;
     padding-right: 6px; } }
