--- a/public/css/owl.theme.css
+++ b/public/css/owl.theme.css
@@ -3,14 +3,14 @@
 *	v1.3.3
 */
 
-.owl-theme .owl-controls***REMOVED***
+.owl-theme .owl-controls{
 	margin-top: 10px;
 	text-align: center;
 }
 
 /* Styling Next and Prev buttons */
 
-.owl-theme .owl-controls .owl-buttons div***REMOVED***
+.owl-theme .owl-controls .owl-buttons div{
 	color: #FFF;
 	display: inline-block;
 	zoom: 1;
@@ -27,7 +27,7 @@
 }
 /* Clickable class fix problem with hover on touch devices */
 /* Use it for non-touch hover action */
-.owl-theme .owl-controls.clickable .owl-buttons div:hover***REMOVED***
+.owl-theme .owl-controls.clickable .owl-buttons div:hover{
 	filter: Alpha(Opacity=100);/*IE7 fix*/
 	opacity: 1;
 	text-decoration: none;
@@ -35,12 +35,12 @@
 
 /* Styling Pagination*/
 
-.owl-theme .owl-controls .owl-page***REMOVED***
+.owl-theme .owl-controls .owl-page{
 	display: inline-block;
 	zoom: 1;
 	*display: inline;/*IE7 life-saver */
 }
-.owl-theme .owl-controls .owl-page span***REMOVED***
+.owl-theme .owl-controls .owl-page span{
 	display: block;
 	width: 12px;
 	height: 12px;
@@ -54,14 +54,14 @@
 }
 
 .owl-theme .owl-controls .owl-page.active span,
-.owl-theme .owl-controls.clickable .owl-page:hover span***REMOVED***
+.owl-theme .owl-controls.clickable .owl-page:hover span{
 	filter: Alpha(Opacity=100);/*IE7 fix*/
 	opacity: 1;
 }
 
 /* If PaginationNumbers is true */
 
-.owl-theme .owl-controls .owl-page span.owl-numbers***REMOVED***
+.owl-theme .owl-controls .owl-page span.owl-numbers{
 	height: auto;
 	width: auto;
 	color: #FFF;
@@ -73,7 +73,7 @@
 }
 
 /* preloading images */
-.owl-item.loading***REMOVED***
+.owl-item.loading{
 	min-height: 150px;
 	background: url(AjaxLoader.gif) no-repeat center center
 }
